Fixes logo visibility issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ p.chat-paragraph {
 
 .logo {
     margin-left: 20px;
-    background-image: url("res/logo.png");
+    background-image: url("../res/logo.png");
     display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
